crates/ship-code/tests/snapshots/snapshot_tests__search_symbol_impl_block.snap
---
source: crates/ship-code/tests/snapshot_tests.rs
expression: format_output(&output)
---
═══ Symbol matches ═══
impl Server  src/server.rs:59-90
```
impl Server {
    pub fn new(config: ServerConfig) -> Self {
        Self {
            config,
            sessions: HashMap::new(),
        }
    }

    pub fn add_session(&mut self, session: Session) {
        self.sessions.insert(session.id.clone(), session);
    }

    pub fn remove_session(&mut self, id: &str) -> Option<Session> {
        self.sessions.remove(id)
    }

    pub fn session_count(&self) -> usize {
        self.sessions.len()
    }

    pub fn is_full(&self) -> bool {
        self.sessions.len() >= self.config.max_connections
    }

    /// Find sessions belonging to a specific user.
    pub fn find_user_sessions(&self, user: &str) -> Vec<&Session> {
        self.sessions
            .values()
            .filter(|s| s.user == user)
            .collect()
    }
}
```

impl ServerConfig  src/server.rs:11-24
```
impl ServerConfig {
    pub fn new(host: &str, port: u16) -> Self {
        Self {
            host: host.to_owned(),
            port,
            max_connections: 100,
        }
    }

    pub fn with_max_connections(mut self, max: usize) -> Self {
        self.max_connections = max;
        self
    }
}
```

impl Default for ServerConfig  src/server.rs:26-30
```
impl Default for ServerConfig {
    fn default() -> Self {
        Self::new("127.0.0.1", 8080)
    }
}
```

impl std::fmt::Display for ServerError  src/server.rs:100-108
```
impl std::fmt::Display for ServerError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Self::ConnectionRefused(reason) => write!(f, "connection refused: {reason}"),
            Self::SessionNotFound(id) => write!(f, "session not found: {id}"),
            Self::MaxConnectionsReached => write!(f, "max connections reached"),
        }
    }
}
```

═══ Text matches ═══
src/server.rs:11: impl ServerConfig {
src/server.rs:59: impl Server {
