crates/ship-code/tests/snapshots/snapshot_tests__search_text_invalid_regex_falls_back_to_literal.snap
---
source: crates/ship-code/tests/snapshot_tests.rs
expression: format_output(&output)
---
═══ Text matches ═══
src/server.rs:12:     pub fn new(host: &str, port: u16) -> Self {
src/server.rs:13:         Self {
src/server.rs:20:     pub fn with_max_connections(mut self, max: usize) -> Self {
src/server.rs:27:     fn default() -> Self {
src/server.rs:40:     pub fn new(id: &str, user: &str) -> Self {
src/server.rs:41:         Self {
src/server.rs:60:     pub fn new(config: ServerConfig) -> Self {
src/server.rs:61:         Self {
