crates/ship-code/tests/snapshots/snapshot_tests__search_text_no_matches.snap
---
source: crates/ship-code/tests/snapshot_tests.rs
expression: format_output(&output)
---
No matches found.
